--- a/credentials.html
+++ b/credentials.html
@@ -28,7 +28,7 @@
             form{
                 
                 height: 380px;
-                width: 200px;
+                width: 300px;
                 margin: auto;
                 margin: 20 0 0 450px;
                 padding: 35px 80px 80px;
@@ -103,7 +103,7 @@
                 <option value="D">D</option>
             </select>
             <br> <br>
-            <label for="Subject">Select Section:</label>
+            <label for="Subject">Select Subject:</label>
             <select name="Subject" id="Subject">
                 <option value="Minor">Minor</option>
                 <option value="Compiler Design">Compiler Design</option>
